fix(web-components): add white space normal so that text wrap works on safari
Add white space normal so that text wrap works on safari for navigation items in top nav side menu

--- a/packages/web-components/src/components/ic-navigation-item/ic-navigation-item.css
+++ b/packages/web-components/src/components/ic-navigation-item/ic-navigation-item.css
@@ -138,6 +138,7 @@ svg {
   justify-content: flex-start;
   text-decoration: none;
   text-wrap: wrap;
+  white-space: normal;
   transition: box-shadow var(--ic-transition-duration-fast),
     border-radius var(--ic-transition-duration-fast);
 }
